--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@ body {
   padding: 0px;
   border-radius:100%;
 }
+p {
+  font-size: 12px;
+  color: black;
+  line-height: 20px;
+  font-family: sans-serif;
+}
